# jibecompta

./: .gitignore  README.md  pdf_to_csv.py  pyproject.toml
